--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
   "dependencies": {
     "gatsby": "^2.24.50",
     "gatsby-plugin-netlify-cms": "^4.3.12",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-transformer-remark": "^2.8.32",
+    "howler": "^2.2.0",
     "netlify-cms-app": "^2.12.20",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
+    "react-twitch-embed-video": "^2.0.4",
+    "sockjs-client": "^1.5.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
