--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "netlify-cms-app": "^2.12.20",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
