Style first few scenes

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
+# Asset creation files (preproductin for audio, image, video)
+_bryant-build/
