--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
+    "slugify": "^1.4.5",
     "sockjs-client": "^1.5.0"
   },
   "devDependencies": {
