Add new gifs. Refactor vision rendering

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
     fields:
       - {label: "Name", name: "title", widget: "string"}
       - {label: "Image", name: "featuredimage", widget: image, hint: 'Find gifs with: https://codepen.io/barefootfunk/pen/mdPxgaG'}
-      - {label: "Description", name: "body", widget: "markdown", pattern: ['^.{1,140}$', "Must have 1-140characters"]}
-      - {label: "Heart Choice", name: "heartChoice", widget: "string"}
-      - {label: "Mind Choice", name: "mindChoice", widget: "string"}
-      - {label: "Chaos Choice", name: "chaosChoice", widget: "string"}
+      - {label: "Description", name: "body", widget: "markdown", pattern: ['^.{1,280}$', "Must have 1-280 characters"]}
+      - {label: "Heart Choice", name: "heartChoice", widget: "string", required: false}
+      - {label: "Mind Choice", name: "mindChoice", widget: "string", required: false}
+      - {label: "Chaos Choice", name: "chaosChoice", widget: "string", required: false}
