--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
     "slugify": "^1.4.5",
-    "sockjs-client": "^1.5.0"
+    "sockjs-client": "^1.5.0",
+    "tone": "^14.7.39"
   },
   "devDependencies": {
     "prettier": "2.1.0"
