--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
     "slugify": "^1.4.5",
+    "socket.io-client": "^2.3.0",
     "sockjs-client": "^1.5.0",
     "tone": "^14.7.39"
   },
