--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
     "slugify": "^1.4.5",
