--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bad-words": "^3.0.3",
     "gatsby": "^2.24.50",
     "gatsby-plugin-netlify-cms": "^4.3.12",
     "gatsby-plugin-react-svg": "^3.0.0",
