--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-transformer-remark": "^2.8.32",
     "howler": "^2.2.0",
+    "luxon": "^1.25.0",
     "netlify-cms-app": "^2.12.20",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
