--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.12.0",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
+    "react-load-script": "^0.0.6",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
