--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "netlify-cms-app": "^2.12.20",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-canvas-draw": "^1.1.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-inlinesvg": "^2.1.1",
