Begin working on StarDraw; Add vimeo player

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "amplitude-js": "^7.3.0",
     "bad-words": "^3.0.3",
+    "catenary-curve": "^1.0.1",
     "gatsby": "^2.24.50",
     "gatsby-plugin-netlify-cms": "^4.3.12",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -23,11 +24,12 @@
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-transformer-remark": "^2.8.32",
     "howler": "^2.2.0",
+    "lazy-brush": "^1.0.1",
     "luxon": "^1.25.0",
     "netlify-cms-app": "^2.12.20",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-canvas-draw": "^1.1.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-inlinesvg": "^2.1.1",
@@ -35,6 +37,8 @@
     "react-mailchimp-subscribe": "^2.1.0",
     "react-markdown": "^4.3.1",
     "react-twitch-embed-video": "^2.0.4",
+    "react-vimeo": "^2.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "slugify": "^1.4.5",
     "socket.io-client": "^2.3.0",
     "sockjs-client": "^1.5.0",
