--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "gatsby-transformer-remark": "^2.8.32",
     "howler": "^2.2.0",
     "lazy-brush": "^1.0.1",
+    "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "netlify-cms-app": "^2.12.20",
     "node-sass": "^4.14.1",
+    "pixi.js": "^5.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-countdown": "^2.2.1",
