--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --https",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "HOST=10.0.1.9 npm run develop",
+    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
@@ -24,6 +24,7 @@
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-transformer-remark": "^2.8.32",
     "howler": "^2.2.0",
+    "jquery": "^3.5.1",
     "lazy-brush": "^1.0.1",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
@@ -35,6 +36,7 @@
     "react": "^16.12.0",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-inlinesvg": "^2.1.1",
     "react-load-script": "^0.0.6",
     "react-mailchimp-subscribe": "^2.1.0",
